<resources>
    <string name="app_name">Polly</string>
    <string name="facebook_app_id">298248395510660</string> <string name="fb_login_protocol_scheme">fb298248395510660</string>

    <string-array name="visibility">
        <item>PUBLIC</item>
        <item>PRIVATE</item>
        <item>CUSTOM</item>
        <item>GEOFENCE</item>
        <item>POLLYROOM</item>
    </string-array>
    <!-- layout -->

    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_button_login">Login</string>
    <string name="activity_login_sign_up_instead">If you do not have an account you can sign up here:</string>
    <string name="activity_login_button_sign_up">Sign up</string>
    <string name="Next">next</string>
    <string name="activity_sign_up_username">Username</string>
    <string name="activity_sign_up_fullname">Full Name</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_password_confirm">Confirm Password</string>
    <string name="activity_sign_up_email">Email</string>
    <string name="activity_sign_up_button_sign_up">Sign up</string>
    <string name="activity_sign_up_accept_terms_of_service">I have read the terms of service and I do accept them.</string>

    <!-- menu -->

    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_login_or_sign_up">Login / Sign Up</string>


    <!-- drawer -->


    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="title_activity_login">Sign in / Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_google">LoginActivityGoogle</string>


</resources>