<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">


    <EditText
        android:id="@+id/activity_sign_up_edittext_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/activity_sign_up_username"
        android:hint="@string/activity_sign_up_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_edittext_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_edittext_fullname" />

    <EditText
        android:id="@+id/activity_sign_up_edittext_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/activity_sign_up_username"
        android:hint="@string/activity_sign_up_fullname"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_edittext_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_sign_up_edittext_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/activity_sign_up_password"
        android:hint="@string/activity_sign_up_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password_strength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_edittext_username" />

    <EditText
        android:id="@+id/activity_sign_up_edittext_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/activity_sign_up_password_confirm"
        android:hint="@string/activity_sign_up_password_confirm"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_edittext_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_strength"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/activity_sign_up_edittext_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/activity_sign_up_email"
        android:hint="@string/activity_sign_up_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/shw_psswords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_edittext_password_confirm" />

    <Button
        android:id="@+id/activity_sign_up_button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/activity_sign_up_button_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline40"
        app:layout_constraintStart_toStartOf="@id/guideline39"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_checkbox_accept_terms_of_service" />

    <CheckBox
        android:id="@+id/activity_sign_up_checkbox_accept_terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_sign_up_accept_terms_of_service"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shw_psswords" />

    <TextView
        android:id="@+id/password_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Not Even Close \n (Your password needs at least 6 digits, a uppercase letter, a number and a special character)"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_edittext_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_edittext_password" />

    <CheckBox
        android:id="@+id/shw_psswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Passwords"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_checkbox_accept_terms_of_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_edittext_email" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>